src/test/resources/semantic/custom/reject/wrongFunctionCallParameterType1.ul
void main() {
    foo(5);
}

void foo(float one) {
}
